# poulpy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml
.pi/: SECURITY_REVIEW_GUIDELINES.md
docs/: automorphism-refactor-report.md  backend-agnostic-cleanup-handoff-2026-05-04.md  glwe-external-product-dispatch-report.md
poulpy-bench/: Cargo.toml  README.md
poulpy-bench/benches/: bdd_arithmetic.rs  bdd_prepare.rs  ntt.rs
poulpy-bench/src/: lib.rs
poulpy-bench/src/bench_suite/: ckks.rs  mod.rs
poulpy-bench/src/bench_suite/core/: automorphism.rs  external_product.rs  keyswitch.rs  operations.rs
poulpy-bench/src/bench_suite/hal/: vmp.rs
poulpy-bin-fhe/: Cargo.toml  README.md
poulpy-bin-fhe/examples/: circuit_bootstrapping.rs  max_array.rs
poulpy-bin-fhe/src/bdd_arithmetic/: blind_retrieval.rs  blind_rotation.rs  blind_selection.rs  eval.rs  mod.rs
poulpy-bin-fhe/src/bdd_arithmetic/ciphertexts/: fhe_uint.rs
poulpy-bin-fhe/src/bdd_arithmetic/tests/test_suite/: glwe_blind_rotation.rs
poulpy-bin-fhe/src/blind_rotation/: mod.rs
poulpy-bin-fhe/src/blind_rotation/algorithms/: mod.rs
poulpy-bin-fhe/src/blind_rotation/algorithms/cggi/: algorithm.rs
poulpy-bin-fhe/src/blind_rotation/layouts/: key.rs
poulpy-bin-fhe/src/blind_rotation/tests/: fft64_avx512.rs
poulpy-bin-fhe/src/circuit_bootstrapping/: circuit.rs  mod.rs
poulpy-bin-fhe/src/circuit_bootstrapping/tests/: circuit_bootstrapping.rs  fft64_avx512.rs
poulpy-ckks/: Cargo.toml  README.md
poulpy-ckks/examples/: poly2.rs
poulpy-ckks/src/: error.rs  lib.rs
poulpy-ckks/src/api/: add.rs  composite.rs  conjugate.rs  copy.rs  encryption.rs  imag.rs  mod.rs  mul.rs  neg.rs  plaintext.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs  tmp_bytes.rs
poulpy-ckks/src/default/: add.rs  conjugate.rs  copy.rs  encryption.rs  imag.rs  mod.rs  mul.rs  neg.rs  plaintext.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs
poulpy-ckks/src/delegates/: add.rs  composite.rs  conjugate.rs  copy.rs  encryption.rs  imag.rs  mod.rs  mul.rs  neg.rs  plaintext.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs  tmp_bytes.rs
poulpy-ckks/src/encoding/: reim.rs
poulpy-ckks/src/layouts/: alloc.rs  ciphertext.rs  mod.rs  plaintext.rs
poulpy-ckks/src/leveled/: mod.rs
poulpy-ckks/src/leveled/api/: add.rs  conjugate.rs  pt_znx.rs  rotate.rs  sub.rs
poulpy-ckks/src/leveled/default/: add.rs  conjugate.rs  neg.rs  pt_znx.rs  rotate.rs  sub.rs
poulpy-ckks/src/leveled/delegates/: add.rs  conjugate.rs  pt_znx.rs  rotate.rs  sub.rs  tmp_bytes.rs
poulpy-ckks/src/leveled/oep/: add.rs  conjugate.rs  pt_znx.rs  rotate.rs  sub.rs
poulpy-ckks/src/leveled/tests/test_suite/: add.rs  add_unsafe.rs  composition.rs  dot_product.rs  encryption.rs  errors.rs  helpers.rs  mul.rs  mul_add.rs  mul_sub.rs  sub.rs  sub_unsafe.rs
poulpy-ckks/src/oep/: add.rs  ckks_impl.rs  conjugate.rs  copy.rs  encryption.rs  imag.rs  mod.rs  mul.rs  neg.rs  plaintext.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs
poulpy-ckks/src/test_suite/: add.rs  add_many.rs  add_unsafe.rs  affine.rs  composition.rs  conjugate.rs  copy.rs  dot_product.rs  encryption.rs  errors.rs  helpers.rs  imag.rs  mod.rs  mul.rs  mul_add.rs  mul_many.rs  mul_pow2.rs  mul_sub.rs  neg.rs  rotate.rs  sub.rs  sub_unsafe.rs
poulpy-core/: Cargo.toml  README.md
poulpy-core/src/: dist.rs  lib.rs  scratch.rs
poulpy-core/src/api/: automorphism.rs  conversion.rs  encryption.rs  external_product.rs  keyswitching.rs  mod.rs  operations.rs  transfer.rs
poulpy-core/src/default/: conversion.rs  glwe_packing.rs  glwe_trace.rs  mod.rs
poulpy-core/src/delegates/: automorphism.rs  conversion.rs  encryption.rs  external_product.rs  keyswitching.rs  operations.rs
poulpy-core/src/layouts/: gglwe.rs  gglwe_to_ggsw_key.rs  ggsw.rs  glwe.rs  glwe_automorphism_key.rs  glwe_plaintext.rs  glwe_secret.rs  glwe_switching_key.rs  glwe_tensor_key.rs  glwe_to_lwe_key.rs  lwe_switching_key.rs  lwe_to_glwe_key.rs  macros.rs  mod.rs  scratch_views.rs
poulpy-core/src/oep/: automorphism.rs  conversion.rs  decryption.rs  encryption.rs  mod.rs  (+3 more)
poulpy-cpu-avx/: Cargo.toml  README.md
poulpy-cpu-avx/src/: ckks_impl.rs  core_impl.rs  hal_impl.rs  lib.rs  tests.rs
poulpy-cpu-avx512/: Cargo.toml  README.md
poulpy-cpu-avx512/examples/: rlwe_encrypt_avx512.rs
poulpy-cpu-avx512/src/: ckks_impl.rs  core_impl.rs  hal_impl.rs  lib.rs
poulpy-cpu-avx512/src/fft64/: mod.rs  module.rs  tests.rs
poulpy-cpu-avx512/src/fft64/reim/: fft_avx512.rs  ifft_avx512.rs  mod.rs
poulpy-cpu-avx512/src/fft64/reim4/: arithmetic_avx512.rs
poulpy-cpu-avx512/src/ntt120_avx512/: convolution.rs  mod.rs  module.rs  ntt.rs  tests.rs  vec_znx_dft_consume.rs  vmp.rs
poulpy-cpu-avx512/src/ntt126_ifma/: bbc_meta.rs  convolution.rs  kernels.rs  mat_vec_ifma.rs  mod.rs  module.rs  prim.rs  primes.rs  svp.rs  tables.rs  tests.rs  traits.rs  types.rs  vec_znx_big.rs  vec_znx_dft.rs  vec_znx_dft_asm.s  vmp.rs
poulpy-cpu-avx512/src/ntt126_ifma/reference/: arithmetic.rs  mat_vec.rs  mod.rs  ntt.rs
poulpy-cpu-avx512/src/tests/: ckks_tests.rs
poulpy-cpu-ref/: Cargo.toml  README.md
poulpy-cpu-ref/examples/: ckks_poly2.rs
poulpy-cpu-ref/src/: ckks_impl.rs  core_impl.rs  hal_impl.rs  lib.rs  tests.rs
poulpy-cpu-ref/src/fft64/: mod.rs  reim.rs
poulpy-cpu-ref/src/hal_defaults/: convolution.rs  mod.rs  module.rs  svp_ppol.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs  vmp_pmat.rs
poulpy-cpu-ref/src/hal_impl/: delegating_backend.rs  vec_znx.rs  vmp.rs
poulpy-cpu-ref/src/ntt120/: module.rs
poulpy-cpu-ref/src/reference/: mod.rs
poulpy-cpu-ref/src/reference/ntt120/: convolution.rs  types.rs  vec_znx_dft.rs
poulpy-cpu-ref/src/reference/vec_znx/: add.rs  automorphism.rs  mul_xp_minus_one.rs  negate.rs  normalize.rs  rotate.rs  sampling.rs  shift.rs  sub.rs
poulpy-cpu-ref/src/reference/znx/: sampling.rs
poulpy-cpu-ref/src/tests/: ckks_tests.rs  delegating_backend.rs
poulpy-hal/: Cargo.toml  README.md
poulpy-hal/src/: lib.rs  source.rs
(+112 files in other folders)
