[package]
name = "poulpy-bench"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Consolidated benchmark suite for poulpy"
repository = "https://github.com/poulpy-fhe/poulpy"
homepage = "https://github.com/poulpy-fhe/poulpy"
publish = false
readme = "README.md"

[features]
hal-bench = []
core-bench = ["poulpy-cpu-ref/enable-core"]
bin-fhe-bench = ["core-bench"]
enable-avx = [
    "dep:poulpy-cpu-avx",
    "poulpy-cpu-avx/enable-avx",
]
ckks-bench = ["core-bench", "dep:poulpy-ckks", "poulpy-cpu-ref/enable-ckks"]
# enable-gpu = ["dep:poulpy-gpu", "poulpy-gpu/enable-gpu"]

[dependencies]
criterion = {workspace = true}
rand = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
poulpy-bin-fhe = {workspace = true}
poulpy-ckks = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true}
poulpy-cpu-avx = {workspace = true, optional = true}
# poulpy-gpu = {workspace = true, optional = true}

[[bench]]
name = "vec_znx"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "vec_znx_big"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "vec_znx_dft"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "svp"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "vmp"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "convolution"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "fft"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "ntt"
harness = false
required-features = ["hal-bench"]

[[bench]]
name = "operations"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "encryption"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "decryption"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "external_product"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "glwe_tensor"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "ckks_composite"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "ckks_add"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "ckks_sub"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "ckks_unary"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "ckks_mul"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "ckks_automorphism"
harness = false
required-features = ["ckks-bench"]

[[bench]]
name = "automorphism"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "keyswitch"
harness = false
required-features = ["core-bench"]

[[bench]]
name = "blind_rotate"
harness = false
required-features = ["bin-fhe-bench"]

[[bench]]
name = "circuit_bootstrapping"
harness = false
required-features = ["bin-fhe-bench"]

[[bench]]
name = "bdd_arithmetic"
harness = false
required-features = ["bin-fhe-bench"]

[[bench]]
name = "bdd_prepare"
harness = false
required-features = ["bin-fhe-bench"]

[[bench]]
name = "standard"
harness = false
required-features = ["hal-bench", "core-bench", "bin-fhe-bench"]
