[package]
name = "poulpy-bin-fhe"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing binary/gate-level RLWE-based FHE"
repository = "https://github.com/poulpy-fhe/poulpy"
homepage = "https://github.com/poulpy-fhe/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-bin-fhe = ["poulpy-cpu-ref/enable-core"]
enable-avx = [
    "enable-bin-fhe",
    "dep:poulpy-cpu-avx",
    "poulpy-cpu-avx/enable-avx",
]

[dependencies]
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
itertools = {workspace = true}
byteorder = {workspace = true}
rand = {workspace = true}
paste = {workspace = true}
anyhow = {workspace = true}

[[example]]
name = "bdd_arithmetic"
required-features = ["enable-bin-fhe"]

[[example]]
name = "circuit_bootstrapping"
required-features = ["enable-bin-fhe"]

[[example]]
name = "max_array"
required-features = ["enable-bin-fhe"]
