[package]
name = "poulpy-ckks"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing the CKKS FHE scheme"
repository = "https://github.com/poulpy-fhe/poulpy"
homepage = "https://github.com/poulpy-fhe/poulpy"
documentation = "https://docs.rs/poulpy-ckks"

[features]
enable-ckks = []
enable-avx = []

[dependencies]
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
anyhow = {workspace = true}
bytemuck = {workspace = true}
